Back: bugfixes en queries y load mock data on startup